--- a/BAWebApp/war/BAWebApp.html
+++ b/BAWebApp/war/BAWebApp.html
@@ -33,7 +33,7 @@
   <!--                                           -->
   <body>
   
-  <h1>MarketUserInterfaceGame</h1>
+  <h1>Bandwidth Game</h1>
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
